[package]
name = "rusqlite"
# Note: Update version in README.md when you change this.
authors = ["The rusqlite developers"]
categories = ["database"]
description = "Ergonomic wrapper for SQLite"
documentation = "https://docs.rs/rusqlite/"
edition = "2021"
keywords = ["database", "ffi", "sqlite"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rusqlite/rusqlite"
version = "0.32.1"

exclude = [
    "/.gitattributes",
    "/.github/*",
    "/Changelog.md",
    "/appveyor.yml",
    "/clippy.toml",
    "/codecov.yml",
]

[badges]
appveyor = { repository = "rusqlite/rusqlite" }
codecov = { repository = "rusqlite/rusqlite" }
maintenance = { status = "actively-developed" }

[lib]
name = "rusqlite"

[workspace]
members = ["libsqlite3-sys"]

[features]
load_extension = []
# hot-backup interface: 3.6.11 (2009-02-18)
backup = []
# sqlite3_blob_reopen: 3.7.4
blob = []
collation = []
# sqlite3_create_function_v2: 3.7.3 (2010-10-08)
functions = []
# sqlite3_log: 3.6.23 (2010-03-09)
buildtime_bindgen = ["libsqlite3-sys/buildtime_bindgen"]
bundled = ["libsqlite3-sys/bundled", "modern_sqlite"]
bundled-sqlcipher = ["bundled", "libsqlite3-sys/bundled-sqlcipher"]
bundled-sqlcipher-vendored-openssl = [
    "bundled-sqlcipher",
    "libsqlite3-sys/bundled-sqlcipher-vendored-openssl",
]
hooks = []
i128_blob = []
limits = []
loadable_extension = ["libsqlite3-sys/loadable_extension"]
preupdate_hook = ["hooks", "libsqlite3-sys/preupdate_hook"]
release_memory = []
sqlcipher = ["libsqlite3-sys/sqlcipher"]
trace = []
unlock_notify = ["libsqlite3-sys/unlock_notify"]
# xSavepoint, xRelease and xRollbackTo: 3.7.7 (2011-06-23)
csvtab = ["csv", "vtab"]
vtab = []
# pointer passing interfaces: 3.20.0
array = ["vtab"]
# session extension: 3.13.0
session = ["hooks", "libsqlite3-sys/session"]
# window functions: 3.25.0
window = ["functions"]
# 3.9.0
series = ["vtab"]
# check for invalid query.
extra_check = []
# ]3.14.0, last]
bundled-windows = ["libsqlite3-sys/bundled-windows"]
in_gecko = ["libsqlite3-sys/in_gecko", "modern_sqlite"]
modern_sqlite = ["libsqlite3-sys/bundled_bindings"]
# Build bundled sqlite with -fsanitize=address
column_decltype = []
wasm32-wasi-vfs = ["libsqlite3-sys/wasm32-wasi-vfs"]
with-asan = ["libsqlite3-sys/with-asan"]
# 3.23.0
serialize = ["modern_sqlite"]

# Helper feature for enabling most non-build-related optional features
# or dependencies (except `session`). This is useful for running tests / clippy
# / etc. New features and optional dependencies that don't conflict with anything
# else should be added here.
modern-full = [
    "array",
    "backup",
    "blob",
    "chrono",
    "collation",
    "column_decltype",
    "csvtab",
    "extra_check",
    "functions",
    "hooks",
    "i128_blob",
    "jiff",
    "limits",
    "load_extension",
    "modern_sqlite",
    "serde_json",
    "serialize",
    "series",
    "time",
    "trace",
    "unlock_notify",
    "url",
    "uuid",
    "vtab",
    "window",
]

bundled-full = ["bundled", "modern-full"]

[dependencies]
bitflags = "2.6.0"
chrono = { version = "0.4.38", optional = true, default-features = false, features = [
    "clock",
] }
csv = { version = "1.1", optional = true }
fallible-iterator = "0.3"
fallible-streaming-iterator = "0.1"
hashlink = "0.9"
jiff = { version = "0.1", optional = true, default-features = false, features = [
    "std",
] }
rusqlite-macros = { path = "rusqlite-macros", version = "0.3.0", optional = true }
serde_json = { version = "1.0", optional = true }
smallvec = "1.6.1"
time = { version = "0.3.36", features = [
    "formatting",
    "macros",
    "parsing",
], optional = true }
url = { version = "2.1", optional = true }
uuid = { version = "1.0", optional = true }

[dev-dependencies]
doc-comment = "0.3"
ouroboros = "0.18"
regex = "1.5.5"
self_cell = "1.1.0"
tempfile = "3.1.0"
unicase = "2.6.0"
uuid = { version = "1.0", features = ["v4"] }
wasm-bindgen-test = "0.3"
# Use `bencher` over criterion because it builds much faster,
# and we don't have many benchmarks
bencher = "0.1"

[dependencies.libsqlite3-sys]
path = "libsqlite3-sys"
version = "0.30.1"

[[test]]
name = "auto_ext"

[[test]]
harness = false
name = "config_log"

[[test]]
name = "deny_single_threaded_sqlite_config"

[[test]]
name = "vtab"

[[bench]]
harness = false
name = "cache"

[[bench]]
harness = false
name = "exec"

[[example]]
crate-type = ["cdylib"]
name = "loadable_extension"
required-features = ["functions", "loadable_extension", "trace"]

[[example]]
name = "load_extension"
required-features = ["bundled", "functions", "load_extension", "trace"]

[package.metadata.docs.rs]
all-features = false
default-target = "x86_64-unknown-linux-gnu"
features = ["modern-full", "rusqlite-macros"]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = false
features = ["bundled-full"]
