[package]
authors = ["The rusqlite developers"]
build = "build.rs"
categories = ["external-ffi-bindings"]
description = "Native bindings to the libsqlite3 library"
edition = "2021"
keywords = ["ffi", "sqlcipher", "sqlite"]
license = "MIT"
links = "sqlite3"
name = "libsqlite3-sys"
repository = "https://github.com/rusqlite/rusqlite"
version = "0.30.1"

[features]
buildtime_bindgen = ["bindgen", "pkg-config", "vcpkg"]
bundled = ["bundled_bindings", "cc"]
bundled-sqlcipher = ["bundled"]
bundled-sqlcipher-vendored-openssl = [
    "bundled-sqlcipher",
    "openssl-sys/vendored",
]
bundled-windows = ["bundled_bindings", "cc"]
default = ["min_sqlite_version_3_14_0"]
min_sqlite_version_3_14_0 = ["pkg-config", "vcpkg"]
sqlcipher = []
# Bundle only the bindings file. Note that this does nothing if
# `buildtime_bindgen` is enabled.
bundled_bindings = []
loadable_extension = ["prettyplease", "quote", "syn"]
# sqlite3_unlock_notify >= 3.6.12
unlock_notify = []
# 3.13.0
preupdate_hook = ["buildtime_bindgen"]
# 3.13.0
in_gecko = []
session = ["buildtime_bindgen", "preupdate_hook"]
wasm32-wasi-vfs = []
with-asan = []

[dependencies]
openssl-sys = { version = "0.9.103", optional = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
wasm32-unknown-unknown-openbsd-libc = "0.2"

[build-dependencies]
bindgen = { version = "0.70", optional = true, default-features = false, features = [
    "runtime",
] }
cc = { version = "1.1.6", optional = true }
pkg-config = { version = "0.3.19", optional = true }
vcpkg = { version = "0.2.15", optional = true }
# for loadable_extension:
prettyplease = { version = "0.2.20", optional = true }
# like bindgen
quote = { version = "1.0.36", optional = true, default-features = false }
# like bindgen
syn = { version = "2.0.72", optional = true, features = [
    "extra-traits",
    "full",
    "visit-mut",
] }
